@@ -4,6 +4,7 @@ import org.testng.xml.XmlSuite;
 
 import java.util.List;
 
+
 /**
  * This interface can be implemented by clients to generate a report. Its method generateReport()
  * will be invoked after all the suite have run and the parameters give all the test results that
