@@ -1,4 +1,5 @@
-Current
+New Feature : - User Interface revamp for the html report, The changes is to make the testng report more effective and readable(Akhil Gullapalli).
+================================================================================================================
 Fixed: GITHUB-2180: Write scenario details for Retried tests (Devendra Raju K)
 Fixed: GITHUB-2124: JUnit Report should contain the output of org.testng.Reporter (Krishnan Mahadevan)
 Fixed: GITHUB-2171: Ability to embed attachments and make them available on TestNG XML report (Krishnan Mahadevan)
